# homework27

./: db.sqlite3  pyproject.toml  pytests.ini  requirements.txt
ads/: ads_urls.py  category_urls.py  models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ads_description.py  0003_ad_delete_ads_alter_category_options_ad_category_id.py  0004_alter_ad_author_id_alter_ad_category_id_and_more.py  0005_rename_author_id_ad_author_and_more.py  0006_selection.py  0007_category_slug_alter_ad_is_published_alter_ad_price_and_more.py  0008_alter_ad_name.py  0009_alter_ad_description_alter_category_slug.py
ads/urls/: selections_urls.py
datasets/: ads.csv  ads.json  convert_to_json.py
homework27/: settings.py  urls.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selections/: selection_create_test.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py  0003_alter_user_last_name.py  0004_rename_location_id_user_location.py  0005_alter_location_lat_alter_location_lng.py  0006_alter_user_managers_user_date_joined_user_email_and_more.py  0007_alter_user_password.py  0008_alter_user_age.py  0009_alter_user_age.py  0010_user_birth_date_alter_user_email.py
